syntax = "proto3";

package proto;

service CarCollection {
    rpc GetList (CarRequest) returns (CarResponse) {}
};

message Car {
    string type = 1;
    uint64 year = 2;
}

message CarRequest {
    uint64 year = 1;
    uint32 limit = 2;
    string type = 3;
};

message CarResponse {
    repeated Car list = 1;
};